# Game-Scene

./: .dockerignore  .gitignore  Dockerfile  README.md  docker.sh  pyproject.toml  startup-service.sh
src/game_core/: __init__.py  mechanics.py  models.py
src/game_scene/: __init__.py  accessor.py  middleware.py  server.py
src/grpc_api/: game_scene_pb2.py  game_scene_pb2.pyi  game_scene_pb2_grpc.py
src/proto_schemas/: game_scene.proto
src/protobuf/: game_scene.proto
