[tool.poetry]
name = "game-scene"
version = "0.1.0"
description = "Part of the Spichki Game project"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.4"
grpcio = "^1.51.3"
grpcio-tools = "^1.51.3"
grpc-api-generator = {git = "https://github.com/Spichki-Game/gRPC-API-generator.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
jedi = "^0.18.2"
yapf = "^0.32.0"
autopep8 = "^2.0.2"
mypy = "^1.1.1"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "game_scene",
    "game_core",
    "mechanics",
    "models"
]

[tool.poetry.scripts]
server = "game_scene.server:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
